--- a/KoreanRomanisation/KoreanRomanisation.csproj
+++ b/KoreanRomanisation/KoreanRomanisation.csproj
@@ -1,75 +1,10 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+﻿<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{819DBD2A-8ED3-4941-8D39-AA09BB7FECBC}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>KoreanRomanisation</RootNamespace>
-    <AssemblyName>KoreanRomanisation</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
+    <TargetFramework>net8.0</TargetFramework>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <LangVersion>default</LangVersion>
+    <Version>0.1.0</Version>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
-  </PropertyGroup>
-  <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Xml" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="Rules\RomanisationRule.cs" />
-    <Compile Include="Rules\TupleList.cs" />
-    <Compile Include="TextBlock.cs" />
-    <Compile Include="Rules\FinalPronunciationChangeRomanisationRule.cs" />
-    <Compile Include="Rules\FinalRomanisationRule.cs" />
-    <Compile Include="Rules\InitialPronunciationChangeRomanisationRule.cs" />
-    <Compile Include="Rules\InitialRomanisationRule.cs" />
-    <Compile Include="Romanisations\IRomanisation.cs" />
-    <Compile Include="ITextSection.cs" />
-    <Compile Include="KoreanLetter.cs" />
-    <Compile Include="KoreanTextSection.cs" />
-    <Compile Include="Romanisations\McCuneReischauerRomanisation.cs" />
-    <Compile Include="Rules\MedialRomanisationRule.cs" />
-    <Compile Include="NonKoreanTextSection.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Romanisations\RevisedRomanisation.cs" />
-    <Compile Include="Romanisations\Romanisation.cs" />
-    <Compile Include="Romanisations\SimplifiedRomanisation.cs" />
-    <Compile Include="KoreanSyllable.cs" />
-    <Compile Include="Romanisations\YaleRomanisation.cs" />
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
+
 </Project>
