style: change spelling of romanisation to use a 'z' instead of 's'

--- a/KoreanRomanization.Tests/KoreanRomanization.Tests.csproj
+++ b/KoreanRomanization.Tests/KoreanRomanization.Tests.csproj
@@ -18,8 +18,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\KoreanRomanisation\KoreanRomanisation.csproj">
-      <Name>KoreanRomanisation</Name>
+    <ProjectReference Include="..\KoreanRomanization\KoreanRomanization.csproj">
+      <Name>KoreanRomanization</Name>
     </ProjectReference>
   </ItemGroup>
 
